erro de ortografia

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,6 +10,6 @@
     <h1>hello world</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, impedit quos! Ea dolore dicta consequatur quasi officiis odit. Nisi officiis modi nam. Architecto aut error minima? A illum debitis molestiae.</p>
-    <p> Esse paragrafo foi adifionado dentro do Github desk para linux &lt;3</p>
+    <p> Esse paragrafo foi adicionado dentro do Github desk para linux &lt;3</p>
 </body>
 </html>
